// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width,initial-scale=1"
    >
    <script defer="defer"
            src="main.js"
    >
    </script>
    <link href="main.css"
          rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -17,5 +17,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.f7g6e4z,html.f7g6e4z body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="n3dbzq0 _11h574f18 _11h574f1b">
+        <div class="_1r8ff0g0 f7g6e476 f7g6e466 f7g6e496 f7g6e486 f7g6e45a _11h574f18 _11h574f1b f7g6e432 f7g6e435">
+          <span class="_1r8ff0g0 f7g6e44u _11h574f0 _11h574f1 _11h574f21 _1d0g9qk4 _11h574fd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._1r8ff0g0 {
  -webkit-tap-highlight-color: transparent;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}
[data-braid-hidefocusrings] ._1r8ff0g0 {
  outline: none;
}
._1r8ff0g1 {
  display: block;
}
._1r8ff0g2 {
  line-height: 1;
}
._1r8ff0g3 {
  list-style: none;
}
._1r8ff0g4 {
  quotes: none;
}
._1r8ff0g4:after,
._1r8ff0g4:before {
  content: "";
}
._1r8ff0g5 {
  border-collapse: collapse;
  border-spacing: 0;
}
._1r8ff0g6 {
  -webkit-appearance: none;
  appearance: none;
}
._1r8ff0g7 {
  background-color: transparent;
}
._1r8ff0g9 {
  color: inherit;
}
._1r8ff0ga:disabled {
  opacity: 1;
}
._1r8ff0ga::-ms-expand {
  display: none;
}
._1r8ff0gc[type="number"] {
  -moz-appearance: textfield;
}
._1r8ff0gc[type="number"]::-webkit-inner-spin-button,
._1r8ff0gc[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._1r8ff0gc::-ms-clear {
  display: none;
}
._1r8ff0gc::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._1r8ff0gf {
  color: inherit;
  text-decoration: none;
}
._1d0g9qk4 {
  font-size: var(--_1d0g9qk0);
  line-height: var(--_1d0g9qk1);
}
._1d0g9qk4:before {
  content: "";
  display: table;
  margin-bottom: var(--_1d0g9qk2);
}
._1d0g9qk4:after {
  content: "";
  display: table;
  margin-top: var(--_1d0g9qk3);
}
.f7g6e40 {
  overflow: hidden;
}
.f7g6e41 {
  overflow: scroll;
}
.f7g6e42 {
  overflow: visible;
}
.f7g6e43 {
  overflow: auto;
}
.f7g6e44 {
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.f7g6e45 {
  outline: none;
}
.f7g6e46 {
  opacity: 0;
}
.f7g6e47 {
  z-index: 0;
}
.f7g6e48 {
  z-index: 1;
}
.f7g6e49 {
  z-index: 2;
}
.f7g6e4a {
  z-index: 90;
}
.f7g6e4b {
  z-index: 100;
}
.f7g6e4c {
  z-index: 200;
}
.f7g6e4d {
  z-index: 290;
}
.f7g6e4e {
  z-index: 300;
}
.f7g6e4f {
  z-index: 400;
}
.f7g6e4g {
  cursor: default;
}
.f7g6e4h {
  cursor: pointer;
}
.f7g6e4i {
  pointer-events: none;
}
.f7g6e4j {
  top: 0;
}
.f7g6e4k {
  bottom: 0;
}
.f7g6e4l {
  left: 0;
}
.f7g6e4m {
  right: 0;
}
.f7g6e4n {
  height: 100%;
}
.f7g6e4o {
  height: var(--cjsqw08);
}
.f7g6e4p {
  width: 100%;
}
.f7g6e4q {
  width: var(--cjsqw08);
}
.f7g6e4r {
  min-width: 0;
}
.f7g6e4s {
  max-width: var(--cjsqw0z);
}
.f7g6e4t {
  max-width: var(--cjsqw010);
}
.f7g6e4u {
  max-width: var(--cjsqw011);
}
.f7g6e4v {
  max-width: var(--cjsqw012);
}
.f7g6e4w {
  transition: var(--cjsqw05f);
}
.f7g6e4x {
  transition: var(--cjsqw05g);
}
.f7g6e4y:active {
  transform: var(--cjsqw05h);
}
html.f7g6e4z .f7g6e411,
html:not(.f7g6e4z) .f7g6e410 {
  background: var(--cjsqw01r);
}
html.f7g6e4z .f7g6e413,
html:not(.f7g6e4z) .f7g6e412 {
  background: var(--cjsqw01s);
}
html.f7g6e4z .f7g6e415,
html:not(.f7g6e4z) .f7g6e414 {
  background: var(--cjsqw01t);
}
html.f7g6e4z .f7g6e417,
html:not(.f7g6e4z) .f7g6e416 {
  background: var(--cjsqw01u);
}
html.f7g6e4z .f7g6e419,
html:not(.f7g6e4z) .f7g6e418 {
  background: var(--cjsqw01v);
}
html.f7g6e4z .f7g6e41b,
html:not(.f7g6e4z) .f7g6e41a {
  background: var(--cjsqw01w);
}
html.f7g6e4z .f7g6e41d,
html:not(.f7g6e4z) .f7g6e41c {
  background: var(--cjsqw01x);
}
html.f7g6e4z .f7g6e41f,
html:not(.f7g6e4z) .f7g6e41e {
  background: var(--cjsqw01y);
}
html.f7g6e4z .f7g6e41h,
html:not(.f7g6e4z) .f7g6e41g {
  background: var(--cjsqw01z);
}
html.f7g6e4z .f7g6e41j,
html:not(.f7g6e4z) .f7g6e41i {
  background: var(--cjsqw020);
}
html.f7g6e4z .f7g6e41l,
html:not(.f7g6e4z) .f7g6e41k {
  background: var(--cjsqw021);
}
html.f7g6e4z .f7g6e41n,
html:not(.f7g6e4z) .f7g6e41m {
  background: var(--cjsqw022);
}
html.f7g6e4z .f7g6e41p,
html:not(.f7g6e4z) .f7g6e41o {
  background: var(--cjsqw023);
}
html.f7g6e4z .f7g6e41r,
html:not(.f7g6e4z) .f7g6e41q {
  background: var(--cjsqw024);
}
html.f7g6e4z .f7g6e41t,
html:not(.f7g6e4z) .f7g6e41s {
  background: var(--cjsqw025);
}
html.f7g6e4z .f7g6e41v,
html:not(.f7g6e4z) .f7g6e41u {
  background: var(--cjsqw026);
}
html.f7g6e4z .f7g6e41x,
html:not(.f7g6e4z) .f7g6e41w {
  background: var(--cjsqw027);
}
html.f7g6e4z .f7g6e41z,
html:not(.f7g6e4z) .f7g6e41y {
  background: var(--cjsqw028);
}
html.f7g6e4z .f7g6e421,
html:not(.f7g6e4z) .f7g6e420 {
  background: var(--cjsqw029);
}
html.f7g6e4z .f7g6e423,
html:not(.f7g6e4z) .f7g6e422 {
  background: var(--cjsqw02a);
}
html.f7g6e4z .f7g6e425,
html:not(.f7g6e4z) .f7g6e424 {
  background: var(--cjsqw02b);
}
html.f7g6e4z .f7g6e427,
html:not(.f7g6e4z) .f7g6e426 {
  background: var(--cjsqw02c);
}
html.f7g6e4z .f7g6e429,
html:not(.f7g6e4z) .f7g6e428 {
  background: var(--cjsqw02d);
}
html.f7g6e4z .f7g6e42b,
html:not(.f7g6e4z) .f7g6e42a {
  background: var(--cjsqw02e);
}
html.f7g6e4z .f7g6e42d,
html:not(.f7g6e4z) .f7g6e42c {
  background: var(--cjsqw02f);
}
html.f7g6e4z .f7g6e42f,
html:not(.f7g6e4z) .f7g6e42e {
  background: var(--cjsqw02g);
}
html.f7g6e4z .f7g6e42h,
html:not(.f7g6e4z) .f7g6e42g {
  background: var(--cjsqw02h);
}
html.f7g6e4z .f7g6e42j,
html:not(.f7g6e4z) .f7g6e42i {
  background: var(--cjsqw02i);
}
html.f7g6e4z .f7g6e42l,
html:not(.f7g6e4z) .f7g6e42k {
  background: var(--cjsqw02j);
}
html.f7g6e4z .f7g6e42n,
html:not(.f7g6e4z) .f7g6e42m {
  background: var(--cjsqw02k);
}
html.f7g6e4z .f7g6e42p,
html:not(.f7g6e4z) .f7g6e42o {
  background: var(--cjsqw02l);
}
html.f7g6e4z .f7g6e42r,
html:not(.f7g6e4z) .f7g6e42q {
  background: var(--cjsqw02m);
}
html.f7g6e4z .f7g6e42t,
html:not(.f7g6e4z) .f7g6e42s {
  background: var(--cjsqw02n);
}
html.f7g6e4z .f7g6e42v,
html:not(.f7g6e4z) .f7g6e42u {
  background: var(--cjsqw02o);
}
html.f7g6e4z .f7g6e42x,
html:not(.f7g6e4z) .f7g6e42w {
  background: var(--cjsqw02p);
}
html.f7g6e4z .f7g6e42z,
html:not(.f7g6e4z) .f7g6e42y {
  background: var(--cjsqw02q);
}
html.f7g6e4z .f7g6e431,
html:not(.f7g6e4z) .f7g6e430 {
  background: var(--cjsqw02r);
}
html.f7g6e4z .f7g6e433,
html:not(.f7g6e4z) .f7g6e432 {
  background: var(--cjsqw02s);
}
html.f7g6e4z .f7g6e435,
html:not(.f7g6e4z) .f7g6e434 {
  background: var(--cjsqw02t);
}
html.f7g6e4z .f7g6e437,
html:not(.f7g6e4z) .f7g6e436 {
  box-shadow: var(--cjsqw05i);
}
html.f7g6e4z .f7g6e439,
html:not(.f7g6e4z) .f7g6e438 {
  box-shadow: var(--cjsqw05j);
}
html.f7g6e4z .f7g6e43b,
html:not(.f7g6e4z) .f7g6e43a {
  box-shadow: var(--cjsqw05k);
}
html.f7g6e4z .f7g6e43d,
html:not(.f7g6e4z) .f7g6e43c {
  box-shadow: inset 0 0 0 var(--cjsqw0x) var(--cjsqw0d);
}
html.f7g6e4z .f7g6e43f,
html:not(.f7g6e4z) .f7g6e43e {
  box-shadow: inset 0 0 0 var(--cjsqw0x) var(--cjsqw0e);
}
html.f7g6e4z .f7g6e43h,
html:not(.f7g6e4z) .f7g6e43g {
  box-shadow: inset 0 0 0 var(--cjsqw0w) var(--cjsqw0f);
}
html.f7g6e4z .f7g6e43j,
html:not(.f7g6e4z) .f7g6e43i {
  box-shadow: inset 0 0 0 var(--cjsqw0w) var(--cjsqw0g);
}
html.f7g6e4z .f7g6e43l,
html:not(.f7g6e4z) .f7g6e43k {
  box-shadow: inset 0 0 0 var(--cjsqw0w) var(--cjsqw0h);
}
html.f7g6e4z .f7g6e43n,
html:not(.f7g6e4z) .f7g6e43m {
  box-shadow: inset 0 0 0 var(--cjsqw0x) var(--cjsqw0h);
}
html.f7g6e4z .f7g6e43p,
html:not(.f7g6e4z) .f7g6e43o {
  box-shadow: inset 0 0 0 var(--cjsqw0w) var(--cjsqw0i);
}
html.f7g6e4z .f7g6e43r,
html:not(.f7g6e4z) .f7g6e43q {
  box-shadow: inset 0 0 0 var(--cjsqw0x) var(--cjsqw0i);
}
html.f7g6e4z .f7g6e43t,
html:not(.f7g6e4z) .f7g6e43s {
  box-shadow: inset 0 0 0 var(--cjsqw0w) var(--cjsqw0j);
}
html.f7g6e4z .f7g6e43v,
html:not(.f7g6e4z) .f7g6e43u {
  box-shadow: inset 0 0 0 var(--cjsqw0w) var(--cjsqw0l);
}
html.f7g6e4z .f7g6e43x,
html:not(.f7g6e4z) .f7g6e43w {
  box-shadow: inset 0 0 0 var(--cjsqw0x) var(--cjsqw0l);
}
html.f7g6e4z .f7g6e43z,
html:not(.f7g6e4z) .f7g6e43y {
  box-shadow: inset 0 0 0 var(--cjsqw0w) var(--cjsqw0m);
}
html.f7g6e4z .f7g6e441,
html:not(.f7g6e4z) .f7g6e440 {
  box-shadow: inset 0 0 0 var(--cjsqw0x) var(--cjsqw0m);
}
html.f7g6e4z .f7g6e443,
html:not(.f7g6e4z) .f7g6e442 {
  box-shadow: inset 0 0 0 var(--cjsqw0w) var(--cjsqw0n);
}
html.f7g6e4z .f7g6e445,
html:not(.f7g6e4z) .f7g6e444 {
  box-shadow: inset 0 0 0 var(--cjsqw0w) var(--cjsqw0o);
}
html.f7g6e4z .f7g6e447,
html:not(.f7g6e4z) .f7g6e446 {
  box-shadow: inset 0 0 0 var(--cjsqw0w) var(--cjsqw0p);
}
html.f7g6e4z .f7g6e449,
html:not(.f7g6e4z) .f7g6e448 {
  box-shadow: inset 0 0 0 var(--cjsqw0x) var(--cjsqw0p);
}
html.f7g6e4z .f7g6e44b,
html:not(.f7g6e4z) .f7g6e44a {
  box-shadow: inset 0 0 0 var(--cjsqw0w) var(--cjsqw0q);
}
html.f7g6e4z .f7g6e44d,
html:not(.f7g6e4z) .f7g6e44c {
  box-shadow: inset 0 0 0 var(--cjsqw0x) var(--cjsqw0q);
}
html.f7g6e4z .f7g6e44f,
html:not(.f7g6e4z) .f7g6e44e {
  box-shadow: inset 0 0 0 var(--cjsqw0w) var(--cjsqw0r);
}
html.f7g6e4z .f7g6e44h,
html:not(.f7g6e4z) .f7g6e44g {
  box-shadow: inset 0 0 0 var(--cjsqw0w) var(--cjsqw0s);
}
html.f7g6e4z .f7g6e44j,
html:not(.f7g6e4z) .f7g6e44i {
  box-shadow: inset 0 0 0 var(--cjsqw0w) var(--cjsqw0t);
}
html.f7g6e4z .f7g6e44l,
html:not(.f7g6e4z) .f7g6e44k {
  box-shadow: inset 0 0 0 var(--cjsqw0w) var(--cjsqw0u);
}
html.f7g6e4z .f7g6e44n,
html:not(.f7g6e4z) .f7g6e44m {
  box-shadow: inset 0 0 0 var(--cjsqw0w) var(--cjsqw0v);
}
html.f7g6e4z .f7g6e44p,
html:not(.f7g6e4z) .f7g6e44o {
  box-shadow: 0 0 0 var(--cjsqw0y) var(--cjsqw0k);
}
.f7g6e44q {
  display: none;
}
.f7g6e44u {
  display: block;
}
.f7g6e44y {
  display: inline;
}
.f7g6e452 {
  display: inline-block;
}
.f7g6e456 {
  display: flex;
}
.f7g6e45a {
  position: relative;
}
.f7g6e45e {
  position: absolute;
}
.f7g6e45i {
  position: fixed;
}
.f7g6e45m {
  border-radius: 0;
}
.f7g6e45q {
  border-radius: 9999px;
}
.f7g6e45u {
  border-radius: var(--cjsqw0a);
}
.f7g6e45y {
  border-radius: var(--cjsqw0b);
}
.f7g6e462 {
  border-radius: var(--cjsqw0c);
}
.f7g6e466 {
  padding-top: var(--cjsqw00);
}
.f7g6e46a {
  padding-top: var(--cjsqw01);
}
.f7g6e46e {
  padding-top: var(--cjsqw02);
}
.f7g6e46i {
  padding-top: var(--cjsqw03);
}
.f7g6e46m {
  padding-top: var(--cjsqw04);
}
.f7g6e46q {
  padding-top: var(--cjsqw05);
}
.f7g6e46u {
  padding-top: var(--cjsqw06);
}
.f7g6e46y {
  padding-top: var(--cjsqw07);
}
.f7g6e472 {
  padding-top: 0;
}
.f7g6e476 {
  padding-bottom: var(--cjsqw00);
}
.f7g6e47a {
  padding-bottom: var(--cjsqw01);
}
.f7g6e47e {
  padding-bottom: var(--cjsqw02);
}
.f7g6e47i {
  padding-bottom: var(--cjsqw03);
}
.f7g6e47m {
  padding-bottom: var(--cjsqw04);
}
.f7g6e47q {
  padding-bottom: var(--cjsqw05);
}
.f7g6e47u {
  padding-bottom: var(--cjsqw06);
}
.f7g6e47y {
  padding-bottom: var(--cjsqw07);
}
.f7g6e482 {
  padding-bottom: 0;
}
.f7g6e486 {
  padding-right: var(--cjsqw00);
}
.f7g6e48a {
  padding-right: var(--cjsqw01);
}
.f7g6e48e {
  padding-right: var(--cjsqw02);
}
.f7g6e48i {
  padding-right: var(--cjsqw03);
}
.f7g6e48m {
  padding-right: var(--cjsqw04);
}
.f7g6e48q {
  padding-right: var(--cjsqw05);
}
.f7g6e48u {
  padding-right: var(--cjsqw06);
}
.f7g6e48y {
  padding-right: var(--cjsqw07);
}
.f7g6e492 {
  padding-right: 0;
}
.f7g6e496 {
  padding-left: var(--cjsqw00);
}
.f7g6e49a {
  padding-left: var(--cjsqw01);
}
.f7g6e49e {
  padding-left: var(--cjsqw02);
}
.f7g6e49i {
  padding-left: var(--cjsqw03);
}
.f7g6e49m {
  padding-left: var(--cjsqw04);
}
.f7g6e49q {
  padding-left: var(--cjsqw05);
}
.f7g6e49u {
  padding-left: var(--cjsqw06);
}
.f7g6e49y {
  padding-left: var(--cjsqw07);
}
.f7g6e4a2 {
  padding-left: 0;
}
.f7g6e4a6 {
  margin-top: var(--cjsqw00);
}
.f7g6e4aa {
  margin-top: var(--cjsqw01);
}
.f7g6e4ae {
  margin-top: var(--cjsqw02);
}
.f7g6e4ai {
  margin-top: var(--cjsqw03);
}
.f7g6e4am {
  margin-top: var(--cjsqw04);
}
.f7g6e4aq {
  margin-top: var(--cjsqw05);
}
.f7g6e4au {
  margin-top: var(--cjsqw06);
}
.f7g6e4ay {
  margin-top: var(--cjsqw07);
}
.f7g6e4b2 {
  margin-top: 0;
}
.f7g6e4b6 {
  margin-bottom: var(--cjsqw00);
}
.f7g6e4ba {
  margin-bottom: var(--cjsqw01);
}
.f7g6e4be {
  margin-bottom: var(--cjsqw02);
}
.f7g6e4bi {
  margin-bottom: var(--cjsqw03);
}
.f7g6e4bm {
  margin-bottom: var(--cjsqw04);
}
.f7g6e4bq {
  margin-bottom: var(--cjsqw05);
}
.f7g6e4bu {
  margin-bottom: var(--cjsqw06);
}
.f7g6e4by {
  margin-bottom: var(--cjsqw07);
}
.f7g6e4c2 {
  margin-bottom: 0;
}
.f7g6e4c6 {
  margin-right: var(--cjsqw00);
}
.f7g6e4ca {
  margin-right: var(--cjsqw01);
}
.f7g6e4ce {
  margin-right: var(--cjsqw02);
}
.f7g6e4ci {
  margin-right: var(--cjsqw03);
}
.f7g6e4cm {
  margin-right: var(--cjsqw04);
}
.f7g6e4cq {
  margin-right: var(--cjsqw05);
}
.f7g6e4cu {
  margin-right: var(--cjsqw06);
}
.f7g6e4cy {
  margin-right: var(--cjsqw07);
}
.f7g6e4d2 {
  margin-right: 0;
}
.f7g6e4d6 {
  margin-left: var(--cjsqw00);
}
.f7g6e4da {
  margin-left: var(--cjsqw01);
}
.f7g6e4de {
  margin-left: var(--cjsqw02);
}
.f7g6e4di {
  margin-left: var(--cjsqw03);
}
.f7g6e4dm {
  margin-left: var(--cjsqw04);
}
.f7g6e4dq {
  margin-left: var(--cjsqw05);
}
.f7g6e4du {
  margin-left: var(--cjsqw06);
}
.f7g6e4dy {
  margin-left: var(--cjsqw07);
}
.f7g6e4e2 {
  margin-left: 0;
}
.f7g6e4e6 {
  align-items: flex-start;
}
.f7g6e4ea {
  align-items: center;
}
.f7g6e4ee {
  align-items: flex-end;
}
.f7g6e4ei {
  justify-content: flex-start;
}
.f7g6e4em {
  justify-content: center;
}
.f7g6e4eq {
  justify-content: flex-end;
}
.f7g6e4eu {
  justify-content: space-between;
}
.f7g6e4ey {
  flex-direction: row;
}
.f7g6e4f2 {
  flex-direction: row-reverse;
}
.f7g6e4f6 {
  flex-direction: column;
}
.f7g6e4fa {
  flex-direction: column-reverse;
}
.f7g6e4fe {
  flex-wrap: wrap;
}
.f7g6e4fi {
  flex-wrap: nowrap;
}
.f7g6e4fm {
  flex-shrink: 0;
}
.f7g6e4fq {
  flex-grow: 0;
}
.f7g6e4fu {
  flex-grow: 1;
}
.f7g6e4fy {
  text-align: left;
}
.f7g6e4g2 {
  text-align: center;
}
.f7g6e4g6 {
  text-align: right;
}
@media screen and (min-width: 740px) {
  .f7g6e44r {
    display: none;
  }
  .f7g6e44v {
    display: block;
  }
  .f7g6e44z {
    display: inline;
  }
  .f7g6e453 {
    display: inline-block;
  }
  .f7g6e457 {
    display: flex;
  }
  .f7g6e45b {
    position: relative;
  }
  .f7g6e45f {
    position: absolute;
  }
  .f7g6e45j {
    position: fixed;
  }
  .f7g6e45n {
    border-radius: 0;
  }
  .f7g6e45r {
    border-radius: 9999px;
  }
  .f7g6e45v {
    border-radius: var(--cjsqw0a);
  }
  .f7g6e45z {
    border-radius: var(--cjsqw0b);
  }
  .f7g6e463 {
    border-radius: var(--cjsqw0c);
  }
  .f7g6e467 {
    padding-top: var(--cjsqw00);
  }
  .f7g6e46b {
    padding-top: var(--cjsqw01);
  }
  .f7g6e46f {
    padding-top: var(--cjsqw02);
  }
  .f7g6e46j {
    padding-top: var(--cjsqw03);
  }
  .f7g6e46n {
    padding-top: var(--cjsqw04);
  }
  .f7g6e46r {
    padding-top: var(--cjsqw05);
  }
  .f7g6e46v {
    padding-top: var(--cjsqw06);
  }
  .f7g6e46z {
    padding-top: var(--cjsqw07);
  }
  .f7g6e473 {
    padding-top: 0;
  }
  .f7g6e477 {
    padding-bottom: var(--cjsqw00);
  }
  .f7g6e47b {
    padding-bottom: var(--cjsqw01);
  }
  .f7g6e47f {
    padding-bottom: var(--cjsqw02);
  }
  .f7g6e47j {
    padding-bottom: var(--cjsqw03);
  }
  .f7g6e47n {
    padding-bottom: var(--cjsqw04);
  }
  .f7g6e47r {
    padding-bottom: var(--cjsqw05);
  }
  .f7g6e47v {
    padding-bottom: var(--cjsqw06);
  }
  .f7g6e47z {
    padding-bottom: var(--cjsqw07);
  }
  .f7g6e483 {
    padding-bottom: 0;
  }
  .f7g6e487 {
    padding-right: var(--cjsqw00);
  }
  .f7g6e48b {
    padding-right: var(--cjsqw01);
  }
  .f7g6e48f {
    padding-right: var(--cjsqw02);
  }
  .f7g6e48j {
    padding-right: var(--cjsqw03);
  }
  .f7g6e48n {
    padding-right: var(--cjsqw04);
  }
  .f7g6e48r {
    padding-right: var(--cjsqw05);
  }
  .f7g6e48v {
    padding-right: var(--cjsqw06);
  }
  .f7g6e48z {
    padding-right: var(--cjsqw07);
  }
  .f7g6e493 {
    padding-right: 0;
  }
  .f7g6e497 {
    padding-left: var(--cjsqw00);
  }
  .f7g6e49b {
    padding-left: var(--cjsqw01);
  }
  .f7g6e49f {
    padding-left: var(--cjsqw02);
  }
  .f7g6e49j {
    padding-left: var(--cjsqw03);
  }
  .f7g6e49n {
    padding-left: var(--cjsqw04);
  }
  .f7g6e49r {
    padding-left: var(--cjsqw05);
  }
  .f7g6e49v {
    padding-left: var(--cjsqw06);
  }
  .f7g6e49z {
    padding-left: var(--cjsqw07);
  }
  .f7g6e4a3 {
    padding-left: 0;
  }
  .f7g6e4a7 {
    margin-top: var(--cjsqw00);
  }
  .f7g6e4ab {
    margin-top: var(--cjsqw01);
  }
  .f7g6e4af {
    margin-top: var(--cjsqw02);
  }
  .f7g6e4aj {
    margin-top: var(--cjsqw03);
  }
  .f7g6e4an {
    margin-top: var(--cjsqw04);
  }
  .f7g6e4ar {
    margin-top: var(--cjsqw05);
  }
  .f7g6e4av {
    margin-top: var(--cjsqw06);
  }
  .f7g6e4az {
    margin-top: var(--cjsqw07);
  }
  .f7g6e4b3 {
    margin-top: 0;
  }
  .f7g6e4b7 {
    margin-bottom: var(--cjsqw00);
  }
  .f7g6e4bb {
    margin-bottom: var(--cjsqw01);
  }
  .f7g6e4bf {
    margin-bottom: var(--cjsqw02);
  }
  .f7g6e4bj {
    margin-bottom: var(--cjsqw03);
  }
  .f7g6e4bn {
    margin-bottom: var(--cjsqw04);
  }
  .f7g6e4br {
    margin-bottom: var(--cjsqw05);
  }
  .f7g6e4bv {
    margin-bottom: var(--cjsqw06);
  }
  .f7g6e4bz {
    margin-bottom: var(--cjsqw07);
  }
  .f7g6e4c3 {
    margin-bottom: 0;
  }
  .f7g6e4c7 {
    margin-right: var(--cjsqw00);
  }
  .f7g6e4cb {
    margin-right: var(--cjsqw01);
  }
  .f7g6e4cf {
    margin-right: var(--cjsqw02);
  }
  .f7g6e4cj {
    margin-right: var(--cjsqw03);
  }
  .f7g6e4cn {
    margin-right: var(--cjsqw04);
  }
  .f7g6e4cr {
    margin-right: var(--cjsqw05);
  }
  .f7g6e4cv {
    margin-right: var(--cjsqw06);
  }
  .f7g6e4cz {
    margin-right: var(--cjsqw07);
  }
  .f7g6e4d3 {
    margin-right: 0;
  }
  .f7g6e4d7 {
    margin-left: var(--cjsqw00);
  }
  .f7g6e4db {
    margin-left: var(--cjsqw01);
  }
  .f7g6e4df {
    margin-left: var(--cjsqw02);
  }
  .f7g6e4dj {
    margin-left: var(--cjsqw03);
  }
  .f7g6e4dn {
    margin-left: var(--cjsqw04);
  }
  .f7g6e4dr {
    margin-left: var(--cjsqw05);
  }
  .f7g6e4dv {
    margin-left: var(--cjsqw06);
  }
  .f7g6e4dz {
    margin-left: var(--cjsqw07);
  }
  .f7g6e4e3 {
    margin-left: 0;
  }
  .f7g6e4e7 {
    align-items: flex-start;
  }
  .f7g6e4eb {
    align-items: center;
  }
  .f7g6e4ef {
    align-items: flex-end;
  }
  .f7g6e4ej {
    justify-content: flex-start;
  }
  .f7g6e4en {
    justify-content: center;
  }
  .f7g6e4er {
    justify-content: flex-end;
  }
  .f7g6e4ev {
    justify-content: space-between;
  }
  .f7g6e4ez {
    flex-direction: row;
  }
  .f7g6e4f3 {
    flex-direction: row-reverse;
  }
  .f7g6e4f7 {
    flex-direction: column;
  }
  .f7g6e4fb {
    flex-direction: column-reverse;
  }
  .f7g6e4ff {
    flex-wrap: wrap;
  }
  .f7g6e4fj {
    flex-wrap: nowrap;
  }
  .f7g6e4fn {
    flex-shrink: 0;
  }
  .f7g6e4fr {
    flex-grow: 0;
  }
  .f7g6e4fv {
    flex-grow: 1;
  }
  .f7g6e4fz {
    text-align: left;
  }
  .f7g6e4g3 {
    text-align: center;
  }
  .f7g6e4g7 {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  .f7g6e44s {
    display: none;
  }
  .f7g6e44w {
    display: block;
  }
  .f7g6e450 {
    display: inline;
  }
  .f7g6e454 {
    display: inline-block;
  }
  .f7g6e458 {
    display: flex;
  }
  .f7g6e45c {
    position: relative;
  }
  .f7g6e45g {
    position: absolute;
  }
  .f7g6e45k {
    position: fixed;
  }
  .f7g6e45o {
    border-radius: 0;
  }
  .f7g6e45s {
    border-radius: 9999px;
  }
  .f7g6e45w {
    border-radius: var(--cjsqw0a);
  }
  .f7g6e460 {
    border-radius: var(--cjsqw0b);
  }
  .f7g6e464 {
    border-radius: var(--cjsqw0c);
  }
  .f7g6e468 {
    padding-top: var(--cjsqw00);
  }
  .f7g6e46c {
    padding-top: var(--cjsqw01);
  }
  .f7g6e46g {
    padding-top: var(--cjsqw02);
  }
  .f7g6e46k {
    padding-top: var(--cjsqw03);
  }
  .f7g6e46o {
    padding-top: var(--cjsqw04);
  }
  .f7g6e46s {
    padding-top: var(--cjsqw05);
  }
  .f7g6e46w {
    padding-top: var(--cjsqw06);
  }
  .f7g6e470 {
    padding-top: var(--cjsqw07);
  }
  .f7g6e474 {
    padding-top: 0;
  }
  .f7g6e478 {
    padding-bottom: var(--cjsqw00);
  }
  .f7g6e47c {
    padding-bottom: var(--cjsqw01);
  }
  .f7g6e47g {
    padding-bottom: var(--cjsqw02);
  }
  .f7g6e47k {
    padding-bottom: var(--cjsqw03);
  }
  .f7g6e47o {
    padding-bottom: var(--cjsqw04);
  }
  .f7g6e47s {
    padding-bottom: var(--cjsqw05);
  }
  .f7g6e47w {
    padding-bottom: var(--cjsqw06);
  }
  .f7g6e480 {
    padding-bottom: var(--cjsqw07);
  }
  .f7g6e484 {
    padding-bottom: 0;
  }
  .f7g6e488 {
    padding-right: var(--cjsqw00);
  }
  .f7g6e48c {
    padding-right: var(--cjsqw01);
  }
  .f7g6e48g {
    padding-right: var(--cjsqw02);
  }
  .f7g6e48k {
    padding-right: var(--cjsqw03);
  }
  .f7g6e48o {
    padding-right: var(--cjsqw04);
  }
  .f7g6e48s {
    padding-right: var(--cjsqw05);
  }
  .f7g6e48w {
    padding-right: var(--cjsqw06);
  }
  .f7g6e490 {
    padding-right: var(--cjsqw07);
  }
  .f7g6e494 {
    padding-right: 0;
  }
  .f7g6e498 {
    padding-left: var(--cjsqw00);
  }
  .f7g6e49c {
    padding-left: var(--cjsqw01);
  }
  .f7g6e49g {
    padding-left: var(--cjsqw02);
  }
  .f7g6e49k {
    padding-left: var(--cjsqw03);
  }
  .f7g6e49o {
    padding-left: var(--cjsqw04);
  }
  .f7g6e49s {
    padding-left: var(--cjsqw05);
  }
  .f7g6e49w {
    padding-left: var(--cjsqw06);
  }
  .f7g6e4a0 {
    padding-left: var(--cjsqw07);
  }
  .f7g6e4a4 {
    padding-left: 0;
  }
  .f7g6e4a8 {
    margin-top: var(--cjsqw00);
  }
  .f7g6e4ac {
    margin-top: var(--cjsqw01);
  }
  .f7g6e4ag {
    margin-top: var(--cjsqw02);
  }
  .f7g6e4ak {
    margin-top: var(--cjsqw03);
  }
  .f7g6e4ao {
    margin-top: var(--cjsqw04);
  }
  .f7g6e4as {
    margin-top: var(--cjsqw05);
  }
  .f7g6e4aw {
    margin-top: var(--cjsqw06);
  }
  .f7g6e4b0 {
    margin-top: var(--cjsqw07);
  }
  .f7g6e4b4 {
    margin-top: 0;
  }
  .f7g6e4b8 {
    margin-bottom: var(--cjsqw00);
  }
  .f7g6e4bc {
    margin-bottom: var(--cjsqw01);
  }
  .f7g6e4bg {
    margin-bottom: var(--cjsqw02);
  }
  .f7g6e4bk {
    margin-bottom: var(--cjsqw03);
  }
  .f7g6e4bo {
    margin-bottom: var(--cjsqw04);
  }
  .f7g6e4bs {
    margin-bottom: var(--cjsqw05);
  }
  .f7g6e4bw {
    margin-bottom: var(--cjsqw06);
  }
  .f7g6e4c0 {
    margin-bottom: var(--cjsqw07);
  }
  .f7g6e4c4 {
    margin-bottom: 0;
  }
  .f7g6e4c8 {
    margin-right: var(--cjsqw00);
  }
  .f7g6e4cc {
    margin-right: var(--cjsqw01);
  }
  .f7g6e4cg {
    margin-right: var(--cjsqw02);
  }
  .f7g6e4ck {
    margin-right: var(--cjsqw03);
  }
  .f7g6e4co {
    margin-right: var(--cjsqw04);
  }
  .f7g6e4cs {
    margin-right: var(--cjsqw05);
  }
  .f7g6e4cw {
    margin-right: var(--cjsqw06);
  }
  .f7g6e4d0 {
    margin-right: var(--cjsqw07);
  }
  .f7g6e4d4 {
    margin-right: 0;
  }
  .f7g6e4d8 {
    margin-left: var(--cjsqw00);
  }
  .f7g6e4dc {
    margin-left: var(--cjsqw01);
  }
  .f7g6e4dg {
    margin-left: var(--cjsqw02);
  }
  .f7g6e4dk {
    margin-left: var(--cjsqw03);
  }
  .f7g6e4do {
    margin-left: var(--cjsqw04);
  }
  .f7g6e4ds {
    margin-left: var(--cjsqw05);
  }
  .f7g6e4dw {
    margin-left: var(--cjsqw06);
  }
  .f7g6e4e0 {
    margin-left: var(--cjsqw07);
  }
  .f7g6e4e4 {
    margin-left: 0;
  }
  .f7g6e4e8 {
    align-items: flex-start;
  }
  .f7g6e4ec {
    align-items: center;
  }
  .f7g6e4eg {
    align-items: flex-end;
  }
  .f7g6e4ek {
    justify-content: flex-start;
  }
  .f7g6e4eo {
    justify-content: center;
  }
  .f7g6e4es {
    justify-content: flex-end;
  }
  .f7g6e4ew {
    justify-content: space-between;
  }
  .f7g6e4f0 {
    flex-direction: row;
  }
  .f7g6e4f4 {
    flex-direction: row-reverse;
  }
  .f7g6e4f8 {
    flex-direction: column;
  }
  .f7g6e4fc {
    flex-direction: column-reverse;
  }
  .f7g6e4fg {
    flex-wrap: wrap;
  }
  .f7g6e4fk {
    flex-wrap: nowrap;
  }
  .f7g6e4fo {
    flex-shrink: 0;
  }
  .f7g6e4fs {
    flex-grow: 0;
  }
  .f7g6e4fw {
    flex-grow: 1;
  }
  .f7g6e4g0 {
    text-align: left;
  }
  .f7g6e4g4 {
    text-align: center;
  }
  .f7g6e4g8 {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  .f7g6e44t {
    display: none;
  }
  .f7g6e44x {
    display: block;
  }
  .f7g6e451 {
    display: inline;
  }
  .f7g6e455 {
    display: inline-block;
  }
  .f7g6e459 {
    display: flex;
  }
  .f7g6e45d {
    position: relative;
  }
  .f7g6e45h {
    position: absolute;
  }
  .f7g6e45l {
    position: fixed;
  }
  .f7g6e45p {
    border-radius: 0;
  }
  .f7g6e45t {
    border-radius: 9999px;
  }
  .f7g6e45x {
    border-radius: var(--cjsqw0a);
  }
  .f7g6e461 {
    border-radius: var(--cjsqw0b);
  }
  .f7g6e465 {
    border-radius: var(--cjsqw0c);
  }
  .f7g6e469 {
    padding-top: var(--cjsqw00);
  }
  .f7g6e46d {
    padding-top: var(--cjsqw01);
  }
  .f7g6e46h {
    padding-top: var(--cjsqw02);
  }
  .f7g6e46l {
    padding-top: var(--cjsqw03);
  }
  .f7g6e46p {
    padding-top: var(--cjsqw04);
  }
  .f7g6e46t {
    padding-top: var(--cjsqw05);
  }
  .f7g6e46x {
    padding-top: var(--cjsqw06);
  }
  .f7g6e471 {
    padding-top: var(--cjsqw07);
  }
  .f7g6e475 {
    padding-top: 0;
  }
  .f7g6e479 {
    padding-bottom: var(--cjsqw00);
  }
  .f7g6e47d {
    padding-bottom: var(--cjsqw01);
  }
  .f7g6e47h {
    padding-bottom: var(--cjsqw02);
  }
  .f7g6e47l {
    padding-bottom: var(--cjsqw03);
  }
  .f7g6e47p {
    padding-bottom: var(--cjsqw04);
  }
  .f7g6e47t {
    padding-bottom: var(--cjsqw05);
  }
  .f7g6e47x {
    padding-bottom: var(--cjsqw06);
  }
  .f7g6e481 {
    padding-bottom: var(--cjsqw07);
  }
  .f7g6e485 {
    padding-bottom: 0;
  }
  .f7g6e489 {
    padding-right: var(--cjsqw00);
  }
  .f7g6e48d {
    padding-right: var(--cjsqw01);
  }
  .f7g6e48h {
    padding-right: var(--cjsqw02);
  }
  .f7g6e48l {
    padding-right: var(--cjsqw03);
  }
  .f7g6e48p {
    padding-right: var(--cjsqw04);
  }
  .f7g6e48t {
    padding-right: var(--cjsqw05);
  }
  .f7g6e48x {
    padding-right: var(--cjsqw06);
  }
  .f7g6e491 {
    padding-right: var(--cjsqw07);
  }
  .f7g6e495 {
    padding-right: 0;
  }
  .f7g6e499 {
    padding-left: var(--cjsqw00);
  }
  .f7g6e49d {
    padding-left: var(--cjsqw01);
  }
  .f7g6e49h {
    padding-left: var(--cjsqw02);
  }
  .f7g6e49l {
    padding-left: var(--cjsqw03);
  }
  .f7g6e49p {
    padding-left: var(--cjsqw04);
  }
  .f7g6e49t {
    padding-left: var(--cjsqw05);
  }
  .f7g6e49x {
    padding-left: var(--cjsqw06);
  }
  .f7g6e4a1 {
    padding-left: var(--cjsqw07);
  }
  .f7g6e4a5 {
    padding-left: 0;
  }
  .f7g6e4a9 {
    margin-top: var(--cjsqw00);
  }
  .f7g6e4ad {
    margin-top: var(--cjsqw01);
  }
  .f7g6e4ah {
    margin-top: var(--cjsqw02);
  }
  .f7g6e4al {
    margin-top: var(--cjsqw03);
  }
  .f7g6e4ap {
    margin-top: var(--cjsqw04);
  }
  .f7g6e4at {
    margin-top: var(--cjsqw05);
  }
  .f7g6e4ax {
    margin-top: var(--cjsqw06);
  }
  .f7g6e4b1 {
    margin-top: var(--cjsqw07);
  }
  .f7g6e4b5 {
    margin-top: 0;
  }
  .f7g6e4b9 {
    margin-bottom: var(--cjsqw00);
  }
  .f7g6e4bd {
    margin-bottom: var(--cjsqw01);
  }
  .f7g6e4bh {
    margin-bottom: var(--cjsqw02);
  }
  .f7g6e4bl {
    margin-bottom: var(--cjsqw03);
  }
  .f7g6e4bp {
    margin-bottom: var(--cjsqw04);
  }
  .f7g6e4bt {
    margin-bottom: var(--cjsqw05);
  }
  .f7g6e4bx {
    margin-bottom: var(--cjsqw06);
  }
  .f7g6e4c1 {
    margin-bottom: var(--cjsqw07);
  }
  .f7g6e4c5 {
    margin-bottom: 0;
  }
  .f7g6e4c9 {
    margin-right: var(--cjsqw00);
  }
  .f7g6e4cd {
    margin-right: var(--cjsqw01);
  }
  .f7g6e4ch {
    margin-right: var(--cjsqw02);
  }
  .f7g6e4cl {
    margin-right: var(--cjsqw03);
  }
  .f7g6e4cp {
    margin-right: var(--cjsqw04);
  }
  .f7g6e4ct {
    margin-right: var(--cjsqw05);
  }
  .f7g6e4cx {
    margin-right: var(--cjsqw06);
  }
  .f7g6e4d1 {
    margin-right: var(--cjsqw07);
  }
  .f7g6e4d5 {
    margin-right: 0;
  }
  .f7g6e4d9 {
    margin-left: var(--cjsqw00);
  }
  .f7g6e4dd {
    margin-left: var(--cjsqw01);
  }
  .f7g6e4dh {
    margin-left: var(--cjsqw02);
  }
  .f7g6e4dl {
    margin-left: var(--cjsqw03);
  }
  .f7g6e4dp {
    margin-left: var(--cjsqw04);
  }
  .f7g6e4dt {
    margin-left: var(--cjsqw05);
  }
  .f7g6e4dx {
    margin-left: var(--cjsqw06);
  }
  .f7g6e4e1 {
    margin-left: var(--cjsqw07);
  }
  .f7g6e4e5 {
    margin-left: 0;
  }
  .f7g6e4e9 {
    align-items: flex-start;
  }
  .f7g6e4ed {
    align-items: center;
  }
  .f7g6e4eh {
    align-items: flex-end;
  }
  .f7g6e4el {
    justify-content: flex-start;
  }
  .f7g6e4ep {
    justify-content: center;
  }
  .f7g6e4et {
    justify-content: flex-end;
  }
  .f7g6e4ex {
    justify-content: space-between;
  }
  .f7g6e4f1 {
    flex-direction: row;
  }
  .f7g6e4f5 {
    flex-direction: row-reverse;
  }
  .f7g6e4f9 {
    flex-direction: column;
  }
  .f7g6e4fd {
    flex-direction: column-reverse;
  }
  .f7g6e4fh {
    flex-wrap: wrap;
  }
  .f7g6e4fl {
    flex-wrap: nowrap;
  }
  .f7g6e4fp {
    flex-shrink: 0;
  }
  .f7g6e4ft {
    flex-grow: 0;
  }
  .f7g6e4fx {
    flex-grow: 1;
  }
  .f7g6e4g1 {
    text-align: left;
  }
  .f7g6e4g5 {
    text-align: center;
  }
  .f7g6e4g9 {
    text-align: right;
  }
}
.n3dbzq0 {
  --cjsqw00: 24px;
  --cjsqw01: 4px;
  --cjsqw02: 8px;
  --cjsqw03: 12px;
  --cjsqw04: 20px;
  --cjsqw05: 32px;
  --cjsqw06: 48px;
  --cjsqw07: 96px;
  --cjsqw08: 44px;
  --cjsqw09: 4px;
  --cjsqw0a: 4px;
  --cjsqw0b: 6px;
  --cjsqw0c: 10px;
  --cjsqw0d: #e60278;
  --cjsqw0e: #f8b1dc;
  --cjsqw0f: #fdc221;
  --cjsqw0g: #fee384;
  --cjsqw0h: #b91e1e;
  --cjsqw0i: #fb999a;
  --cjsqw0j: #838fa5;
  --cjsqw0k: rgba(159, 176, 245, 0.7);
  --cjsqw0l: #4964e9;
  --cjsqw0m: #9fb0f5;
  --cjsqw0n: #1d559d;
  --cjsqw0o: #98c9f1;
  --cjsqw0p: #2e3849;
  --cjsqw0r: #d2d7df;
  --cjsqw0q: #fff;
  --cjsqw0s: #12784f;
  --cjsqw0t: #8bdec5;
  --cjsqw0u: #512eaa;
  --cjsqw0v: #c6acf5;
  --cjsqw0w: 1px;
  --cjsqw0x: 2px;
  --cjsqw0y: 3px;
  --cjsqw0z: 400px;
  --cjsqw010: 660px;
  --cjsqw011: 940px;
  --cjsqw012: 1280px;
  --cjsqw013: #e60278;
  --cjsqw014: #f8b1dc;
  --cjsqw015: #723d02;
  --cjsqw016: #fee384;
  --cjsqw017: #b91e1e;
  --cjsqw018: #fb999a;
  --cjsqw019: #4964e9;
  --cjsqw01a: #9fb0f5;
  --cjsqw01b: #1d559d;
  --cjsqw01c: #98c9f1;
  --cjsqw01d: #4964e9;
  --cjsqw01f: #9fb0f5;
  --cjsqw01e: #4964e9;
  --cjsqw01g: #512eaa;
  --cjsqw01h: #c6acf5;
  --cjsqw01i: #2e3849;
  --cjsqw01j: #fff;
  --cjsqw01k: #12784f;
  --cjsqw01l: #8bdec5;
  --cjsqw01m: #512eaa;
  --cjsqw01n: #c6acf5;
  --cjsqw01o: #f57c00;
  --cjsqw01p: #5a6881;
  --cjsqw01q: hsla(0, 0%, 100%, 0.65);
  --cjsqw01r: #f7f8fb;
  --cjsqw01s: #0e131b;
  --cjsqw01t: #0d3880;
  --cjsqw01u: #e60278;
  --cjsqw01v: #cd026b;
  --cjsqw01w: #fd0585;
  --cjsqw01x: #feeffa;
  --cjsqw01y: #fdd7f3;
  --cjsqw01z: #fde3f6;
  --cjsqw020: #fdc221;
  --cjsqw021: #fef8de;
  --cjsqw022: #b91e1e;
  --cjsqw023: #a31a1a;
  --cjsqw024: #db1616;
  --cjsqw025: #ffe3e2;
  --cjsqw026: #fef3f3;
  --cjsqw027: #fcdbdb;
  --cjsqw028: #fde7e7;
  --cjsqw029: #4964e9;
  --cjsqw02a: #3251e6;
  --cjsqw02b: #5975ff;
  --cjsqw02c: #f4f6fe;
  --cjsqw02d: #dde3fc;
  --cjsqw02e: #e8ecfd;
  --cjsqw02f: #1d559d;
  --cjsqw02g: #e3f2fb;
  --cjsqw02h: #2e3849;
  --cjsqw02i: #242c39;
  --cjsqw02j: #384459;
  --cjsqw02k: #eaecf1;
  --cjsqw02l: #f7f8fb;
  --cjsqw02m: #e6e9f3;
  --cjsqw02n: #eff1f7;
  --cjsqw02o: #12784f;
  --cjsqw02p: #e2f7f1;
  --cjsqw02q: #512eaa;
  --cjsqw02r: #f1e8fd;
  --cjsqw02s: #fff;
  --cjsqw02t: #1c2330;
  --cjsqw02u: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --cjsqw02v: 1456;
  --cjsqw02w: 1900;
  --cjsqw02x: -500;
  --cjsqw02y: 0;
  --cjsqw02z: 2048;
  --cjsqw030: 12px;
  --cjsqw031: 20px;
  --cjsqw032: 8.5313px;
  --cjsqw033: -0.4642em;
  --cjsqw034: -0.4915em;
  --cjsqw035: 12px;
  --cjsqw036: 20px;
  --cjsqw037: 8.5313px;
  --cjsqw038: -0.4642em;
  --cjsqw039: -0.4915em;
  --cjsqw03a: 14px;
  --cjsqw03b: 20px;
  --cjsqw03c: 9.9531px;
  --cjsqw03d: -0.3451em;
  --cjsqw03e: -0.3725em;
  --cjsqw03f: 14px;
  --cjsqw03g: 20px;
  --cjsqw03h: 9.9531px;
  --cjsqw03i: -0.3451em;
  --cjsqw03j: -0.3725em;
  --cjsqw03k: 16px;
  --cjsqw03l: 24px;
  --cjsqw03m: 11.375px;
  --cjsqw03n: -0.3809em;
  --cjsqw03o: -0.4082em;
  --cjsqw03p: 16px;
  --cjsqw03q: 24px;
  --cjsqw03r: 11.375px;
  --cjsqw03s: -0.3809em;
  --cjsqw03t: -0.4082em;
  --cjsqw03u: 18px;
  --cjsqw03v: 28px;
  --cjsqw03w: 12.7969px;
  --cjsqw03x: -0.4086em;
  --cjsqw03y: -0.436em;
  --cjsqw03z: 18px;
  --cjsqw040: 28px;
  --cjsqw041: 12.7969px;
  --cjsqw042: -0.4086em;
  --cjsqw043: -0.436em;
  --cjsqw044: 400;
  --cjsqw045: 500;
  --cjsqw046: 700;
  --cjsqw047: 28px;
  --cjsqw048: 36px;
  --cjsqw049: 19.9063px;
  --cjsqw04a: -0.2737em;
  --cjsqw04b: -0.3011em;
  --cjsqw04c: 42px;
  --cjsqw04d: 44px;
  --cjsqw04e: 29.8594px;
  --cjsqw04f: -0.1547em;
  --cjsqw04g: -0.182em;
  --cjsqw04h: 21px;
  --cjsqw04i: 32px;
  --cjsqw04j: 14.9297px;
  --cjsqw04k: -0.3928em;
  --cjsqw04l: -0.4201em;
  --cjsqw04m: 28px;
  --cjsqw04n: 36px;
  --cjsqw04o: 19.9063px;
  --cjsqw04p: -0.2737em;
  --cjsqw04q: -0.3011em;
  --cjsqw04r: 21px;
  --cjsqw04s: 28px;
  --cjsqw04t: 14.9297px;
  --cjsqw04u: -0.2975em;
  --cjsqw04v: -0.3249em;
  --cjsqw04w: 21px;
  --cjsqw04x: 28px;
  --cjsqw04y: 14.9297px;
  --cjsqw04z: -0.2975em;
  --cjsqw050: -0.3249em;
  --cjsqw051: 18px;
  --cjsqw052: 28px;
  --cjsqw053: 12.7969px;
  --cjsqw054: -0.4086em;
  --cjsqw055: -0.436em;
  --cjsqw056: 18px;
  --cjsqw057: 28px;
  --cjsqw058: 12.7969px;
  --cjsqw059: -0.4086em;
  --cjsqw05a: -0.436em;
  --cjsqw05b: 400;
  --cjsqw05c: 500;
  --cjsqw05d: 24px;
  --cjsqw05e: 20px;
  --cjsqw05f: transform 0.125s ease, opacity 0.125s ease;
  --cjsqw05g: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --cjsqw05h: scale(0.95);
  --cjsqw05i: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --cjsqw05j: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --cjsqw05k: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
._11h574f0 {
  font-family: var(--cjsqw02u);
}
._11h574f1 {
  font-weight: var(--cjsqw044);
}
._11h574f2 {
  font-weight: var(--cjsqw045);
}
._11h574f3 {
  font-weight: var(--cjsqw046);
}
._11h574f4 {
  --_1d0g9qk0: var(--cjsqw030);
  --_1d0g9qk1: var(--cjsqw031);
  --_1d0g9qk2: var(--cjsqw033);
  --_1d0g9qk3: var(--cjsqw034);
}
._11h574f7 {
  --_1d0g9qk0: var(--cjsqw03a);
  --_1d0g9qk1: var(--cjsqw03b);
  --_1d0g9qk2: var(--cjsqw03d);
  --_1d0g9qk3: var(--cjsqw03e);
}
._11h574fa {
  --_1d0g9qk0: var(--cjsqw03k);
  --_1d0g9qk1: var(--cjsqw03l);
  --_1d0g9qk2: var(--cjsqw03n);
  --_1d0g9qk3: var(--cjsqw03o);
}
._11h574fd {
  --_1d0g9qk0: var(--cjsqw03u);
  --_1d0g9qk1: var(--cjsqw03v);
  --_1d0g9qk2: var(--cjsqw03x);
  --_1d0g9qk3: var(--cjsqw03y);
}
._11h574fg {
  font-size: var(--cjsqw030);
  line-height: var(--cjsqw031);
}
._11h574fh {
  font-size: var(--cjsqw03a);
  line-height: var(--cjsqw03b);
}
._11h574fi {
  font-size: var(--cjsqw03k);
  line-height: var(--cjsqw03l);
}
._11h574fj {
  font-size: var(--cjsqw03u);
  line-height: var(--cjsqw03v);
}
._11h574fk {
  font-weight: var(--cjsqw05b);
}
._11h574fl {
  font-weight: var(--cjsqw05c);
}
._11h574fm {
  --_1d0g9qk0: var(--cjsqw047);
  --_1d0g9qk1: var(--cjsqw048);
  --_1d0g9qk2: var(--cjsqw04a);
  --_1d0g9qk3: var(--cjsqw04b);
}
._11h574fp {
  --_1d0g9qk0: var(--cjsqw04h);
  --_1d0g9qk1: var(--cjsqw04i);
  --_1d0g9qk2: var(--cjsqw04k);
  --_1d0g9qk3: var(--cjsqw04l);
}
._11h574fs {
  --_1d0g9qk0: var(--cjsqw04r);
  --_1d0g9qk1: var(--cjsqw04s);
  --_1d0g9qk2: var(--cjsqw04u);
  --_1d0g9qk3: var(--cjsqw04v);
}
._11h574fv {
  --_1d0g9qk0: var(--cjsqw051);
  --_1d0g9qk1: var(--cjsqw052);
  --_1d0g9qk2: var(--cjsqw054);
  --_1d0g9qk3: var(--cjsqw055);
}
html:not(.f7g6e4z) ._11h574f18 {
  --_11h574fy: var(--cjsqw017);
  --_11h574fz: var(--cjsqw015);
  --_11h574f10: var(--cjsqw01b);
  --_11h574f11: var(--cjsqw01m);
  --_11h574f12: var(--cjsqw01k);
  --_11h574f13: var(--cjsqw013);
  --_11h574f14: var(--cjsqw019);
  --_11h574f15: var(--cjsqw01i);
  --_11h574f16: var(--cjsqw01p);
  --_11h574f17: var(--cjsqw01d);
}
html:not(.f7g6e4z) ._11h574f19 {
  --_11h574fy: var(--cjsqw018);
  --_11h574fz: var(--cjsqw016);
  --_11h574f10: var(--cjsqw01c);
  --_11h574f11: var(--cjsqw01n);
  --_11h574f12: var(--cjsqw01l);
  --_11h574f13: var(--cjsqw014);
  --_11h574f14: var(--cjsqw01a);
  --_11h574f15: var(--cjsqw01j);
  --_11h574f16: var(--cjsqw01q);
  --_11h574f17: var(--cjsqw01f);
}
html.f7g6e4z ._11h574f1a {
  --_11h574fy: var(--cjsqw017);
  --_11h574fz: var(--cjsqw015);
  --_11h574f10: var(--cjsqw01b);
  --_11h574f11: var(--cjsqw01m);
  --_11h574f12: var(--cjsqw01k);
  --_11h574f13: var(--cjsqw013);
  --_11h574f14: var(--cjsqw019);
  --_11h574f15: var(--cjsqw01i);
  --_11h574f16: var(--cjsqw01p);
  --_11h574f17: var(--cjsqw01d);
}
html.f7g6e4z ._11h574f1b {
  --_11h574fy: var(--cjsqw018);
  --_11h574fz: var(--cjsqw016);
  --_11h574f10: var(--cjsqw01c);
  --_11h574f11: var(--cjsqw01n);
  --_11h574f12: var(--cjsqw01l);
  --_11h574f13: var(--cjsqw014);
  --_11h574f14: var(--cjsqw01a);
  --_11h574f15: var(--cjsqw01j);
  --_11h574f16: var(--cjsqw01q);
  --_11h574f17: var(--cjsqw01f);
}
html:not(.f7g6e4z) ._11h574f1c,
html:not(.f7g6e4z) ._11h574f1d,
html:not(.f7g6e4z) ._11h574f1e,
html:not(.f7g6e4z) ._11h574f1f {
  --_11h574f15: var(--_11h574fy);
}
html:not(.f7g6e4z) ._11h574f1g,
html:not(.f7g6e4z) ._11h574f1h {
  --_11h574f15: var(--_11h574fz);
}
html:not(.f7g6e4z) ._11h574f1i {
  --_11h574f15: var(--_11h574f12);
}
html:not(.f7g6e4z) ._11h574f1j {
  --_11h574f15: var(--_11h574f10);
}
html:not(.f7g6e4z) ._11h574f1k {
  --_11h574f15: var(--_11h574f11);
}
html.f7g6e4z ._11h574f1l,
html.f7g6e4z ._11h574f1m,
html.f7g6e4z ._11h574f1n,
html.f7g6e4z ._11h574f1o {
  --_11h574f15: var(--_11h574fy);
}
html.f7g6e4z ._11h574f1p,
html.f7g6e4z ._11h574f1q {
  --_11h574f15: var(--_11h574fz);
}
html.f7g6e4z ._11h574f1r {
  --_11h574f15: var(--_11h574f12);
}
html.f7g6e4z ._11h574f1s {
  --_11h574f15: var(--_11h574f10);
}
html.f7g6e4z ._11h574f1t {
  --_11h574f15: var(--_11h574f11);
}
._11h574f1u {
  color: var(--_11h574fy);
}
._11h574f1v {
  color: var(--_11h574fz);
}
._11h574f1w {
  color: var(--_11h574f10);
}
._11h574f1x {
  color: var(--_11h574f11);
}
._11h574f1y {
  color: var(--_11h574f12);
}
._11h574f1z {
  color: var(--_11h574f13);
}
._11h574f20 {
  color: var(--_11h574f14);
}
._11h574f21 {
  color: var(--_11h574f15);
}
._11h574f22 {
  color: var(--_11h574f16);
}
._11h574f23 {
  color: var(--_11h574f17);
}
._11h574f24 {
  padding-bottom: calc((var(--cjsqw08) - var(--cjsqw031)) / 2);
  padding-top: calc((var(--cjsqw08) - var(--cjsqw031)) / 2);
}
._11h574f25 {
  padding-bottom: calc((var(--cjsqw08) - var(--cjsqw03b)) / 2);
  padding-top: calc((var(--cjsqw08) - var(--cjsqw03b)) / 2);
}
._11h574f26 {
  padding-bottom: calc((var(--cjsqw08) - var(--cjsqw03l)) / 2);
  padding-top: calc((var(--cjsqw08) - var(--cjsqw03l)) / 2);
}
._11h574f27 {
  padding-bottom: calc((var(--cjsqw08) - var(--cjsqw03v)) / 2);
  padding-top: calc((var(--cjsqw08) - var(--cjsqw03v)) / 2);
}
@media screen and (min-width: 740px) {
  ._11h574f4 {
    --_1d0g9qk0: var(--cjsqw035);
    --_1d0g9qk1: var(--cjsqw036);
    --_1d0g9qk2: var(--cjsqw038);
    --_1d0g9qk3: var(--cjsqw039);
  }
  ._11h574f7 {
    --_1d0g9qk0: var(--cjsqw03f);
    --_1d0g9qk1: var(--cjsqw03g);
    --_1d0g9qk2: var(--cjsqw03i);
    --_1d0g9qk3: var(--cjsqw03j);
  }
  ._11h574fa {
    --_1d0g9qk0: var(--cjsqw03p);
    --_1d0g9qk1: var(--cjsqw03q);
    --_1d0g9qk2: var(--cjsqw03s);
    --_1d0g9qk3: var(--cjsqw03t);
  }
  ._11h574fd {
    --_1d0g9qk0: var(--cjsqw03z);
    --_1d0g9qk1: var(--cjsqw040);
    --_1d0g9qk2: var(--cjsqw042);
    --_1d0g9qk3: var(--cjsqw043);
  }
  ._11h574fg {
    font-size: var(--cjsqw035);
    line-height: var(--cjsqw036);
  }
  ._11h574fh {
    font-size: var(--cjsqw03f);
    line-height: var(--cjsqw03g);
  }
  ._11h574fi {
    font-size: var(--cjsqw03p);
    line-height: var(--cjsqw03q);
  }
  ._11h574fj {
    font-size: var(--cjsqw03z);
    line-height: var(--cjsqw040);
  }
  ._11h574fm {
    --_1d0g9qk0: var(--cjsqw04c);
    --_1d0g9qk1: var(--cjsqw04d);
    --_1d0g9qk2: var(--cjsqw04f);
    --_1d0g9qk3: var(--cjsqw04g);
  }
  ._11h574fp {
    --_1d0g9qk0: var(--cjsqw04m);
    --_1d0g9qk1: var(--cjsqw04n);
    --_1d0g9qk2: var(--cjsqw04p);
    --_1d0g9qk3: var(--cjsqw04q);
  }
  ._11h574fs {
    --_1d0g9qk0: var(--cjsqw04w);
    --_1d0g9qk1: var(--cjsqw04x);
    --_1d0g9qk2: var(--cjsqw04z);
    --_1d0g9qk3: var(--cjsqw050);
  }
  ._11h574fv {
    --_1d0g9qk0: var(--cjsqw056);
    --_1d0g9qk1: var(--cjsqw057);
    --_1d0g9qk2: var(--cjsqw059);
    --_1d0g9qk3: var(--cjsqw05a);
  }
  ._11h574f24 {
    padding-bottom: calc((var(--cjsqw08) - var(--cjsqw036)) / 2);
    padding-top: calc((var(--cjsqw08) - var(--cjsqw036)) / 2);
  }
  ._11h574f25 {
    padding-bottom: calc((var(--cjsqw08) - var(--cjsqw03g)) / 2);
    padding-top: calc((var(--cjsqw08) - var(--cjsqw03g)) / 2);
  }
  ._11h574f26 {
    padding-bottom: calc((var(--cjsqw08) - var(--cjsqw03q)) / 2);
    padding-top: calc((var(--cjsqw08) - var(--cjsqw03q)) / 2);
  }
  ._11h574f27 {
    padding-bottom: calc((var(--cjsqw08) - var(--cjsqw040)) / 2);
    padding-top: calc((var(--cjsqw08) - var(--cjsqw040)) / 2);
  }
}
._1waru6e6 {
  background: var(--_1waru6e0);
}
._1waru6e7 {
  background: var(--_1waru6e1);
}
._1waru6e8 {
  background: var(--_1waru6e2);
}
._1waru6e9 {
  background: var(--_1waru6e3);
}
._1waru6ea {
  background: var(--_1waru6e4);
}
._1waru6eb {
  background: var(--_1waru6e5);
}
html:not(.f7g6e4z) ._1waru6ec {
  --_1waru6e0: var(--cjsqw0u);
  --_1waru6e1: var(--cjsqw0n);
  --_1waru6e2: var(--cjsqw0s);
  --_1waru6e3: var(--cjsqw0f);
  --_1waru6e4: var(--cjsqw0h);
  --_1waru6e5: var(--cjsqw0l);
}
html:not(.f7g6e4z) ._1waru6ed {
  --_1waru6e0: var(--cjsqw0v);
  --_1waru6e1: var(--cjsqw0o);
  --_1waru6e2: var(--cjsqw0t);
  --_1waru6e3: var(--cjsqw0g);
  --_1waru6e4: var(--cjsqw0i);
  --_1waru6e5: var(--cjsqw0m);
}
html.f7g6e4z ._1waru6ee {
  --_1waru6e0: var(--cjsqw0u);
  --_1waru6e1: var(--cjsqw0n);
  --_1waru6e2: var(--cjsqw0s);
  --_1waru6e3: var(--cjsqw0f);
  --_1waru6e4: var(--cjsqw0h);
  --_1waru6e5: var(--cjsqw0l);
}
html.f7g6e4z ._1waru6ef {
  --_1waru6e0: var(--cjsqw0v);
  --_1waru6e1: var(--cjsqw0o);
  --_1waru6e2: var(--cjsqw0t);
  --_1waru6e3: var(--cjsqw0g);
  --_1waru6e4: var(--cjsqw0i);
  --_1waru6e5: var(--cjsqw0m);
}
._1waru6eg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._1waru6eh {
  width: var(--cjsqw0c);
}
.vnbnfw1 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /*
object-assign
(c) Sindre Sorhus
@license MIT
*/

/** @license React v0.20.2
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.2
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.2
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.2
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script defer
            src="scripts[0]"
    >
    </script>
    <link href="styles[0]"
          rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__f7g6e4z,html.sprinkles_darkMode__f7g6e4z body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_default__n3dbzq0 typography_lightModeTone_light__11h574f18 typography_darkModeTone_dark__11h574f1b">
+        <div class="reset_base__1r8ff0g0 sprinkles_paddingBottom_gutter_mobile__f7g6e476 sprinkles_paddingTop_gutter_mobile__f7g6e466 sprinkles_paddingLeft_gutter_mobile__f7g6e496 sprinkles_paddingRight_gutter_mobile__f7g6e486 sprinkles_position_relative_mobile__f7g6e45a typography_lightModeTone_light__11h574f18 typography_darkModeTone_dark__11h574f1b sprinkles_background_surface_lightMode__f7g6e432 sprinkles_background_surfaceDark_darkMode__f7g6e435">
+          <span class="reset_base__1r8ff0g0 sprinkles_display_block_mobile__f7g6e44u typography_fontFamily__11h574f0 typography_fontWeight_regular__11h574f1 typography_tone_neutral__11h574f21 capsize_capsizeStyle__1d0g9qk4 typography_textSize_large__11h574fd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
